@@ -1,3 +1,8 @@
+2004-06-08  Thomas Heller  <theller@python.net>
+
+	* py2exe\build_exe.py: Support for precompiled .pyc and .pyo
+	files, based on a patch from Shane Holloway.
+
 2004-06-02  Thomas Heller  <theller@python.net>
 
 	* source\run_dll.c: From Mark Hammond: patch to correctly manage
